[workspace]

[package]
name = "mcp-pricing"
version = "2.0.0"
edition = "2024"
description = "Enterprise pricing engine MCP server — CEL rule engine, price waterfall, catalog, segments, promotions, quotes, market intel, audit (35+ tools)"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-pricing"
keywords = ["mcp", "pricing", "billing", "rules-engine", "cel"]
categories = ["api-bindings"]

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
cel-interpreter = "0.10"
cel-parser = "0.10"
